# algorithmic-pokemon-teambuilding

./: README.md  pyproject.toml  teambuilding.ipynb  teambuilding_gen1ou_data.json
cache/2025-07/gen1ou-battles/: battle-gen1ou-226580.json  battle-gen1ou-226581.json  battle-gen1ou-226582.json  battle-gen1ou-226583.json  battle-gen1ou-226584.json  battle-gen1ou-226585.json  battle-gen1ou-226586.json  battle-gen1ou-226587.json  battle-gen1ou-226588.json  battle-gen1ou-226589.json  battle-gen1ou-226590.json  battle-gen1ou-226591.json  battle-gen1ou-226592.json  battle-gen1ou-226593.json  battle-gen1ou-226594.json  battle-gen1ou-226595.json  battle-gen1ou-226596.json  battle-gen1ou-226597.json  battle-gen1ou-226598.json  battle-gen1ou-226599.json  battle-gen1ou-226600.json  battle-gen1ou-226601.json  battle-gen1ou-226602.json  battle-gen1ou-226603.json  battle-gen1ou-226604.json  battle-gen1ou-226605.json  battle-gen1ou-226606.json  battle-gen1ou-226607.json  battle-gen1ou-226608.json  battle-gen1ou-226609.json  battle-gen1ou-226610.json  battle-gen1ou-226611.json  battle-gen1ou-226612.json  battle-gen1ou-226613.json  battle-gen1ou-226614.json  battle-gen1ou-226615.json  battle-gen1ou-226616.json  battle-gen1ou-226617.json  battle-gen1ou-226618.json  battle-gen1ou-226619.json  (+49960 more)
